<resources>
    <string name="welcome_note">Welcome to Wireless Programming Final Project.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign UP</string>
    <string name="app_name">Final Project</string>
    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="ce" translatable="false">CE</string>
    <string name="c" translatable="false">C</string>
    <string name="del" translatable="false">DEL</string>
    <string name="title">BMI Calculator</string>
    <string name="height">Insert your height</string>
    <string name="weight">Insert your weight</string>
    <string name="cm">CM</string>
    <string name="inch">Inch</string>
    <string name="kg">KG</string>
    <string name="calculate">Calculate BMI</string>
    <string name="output">Output</string>
    <string name="first_page">First Page</string>
    <string name="second_page">Second Page</string>
    <string name="third_page">Third page</string>
    <string name="Question1">1. Android is -</string>
    <string name="Question2">2. Android is mainly developed for -</string>
    <string name="Question3">3. Which of the following virtual machine is used by the Android operating system?</string>
    <string name="Question4">4. Android is based on which of the following language?</string>
    <string name="Question5">5. APK stands for -</string>
    <string name="Question6">6. What does API stand for?</string>
    <string name="q1o1">an operating system</string>
    <string name="q1o2">a web browser</string>
    <string name="q1o3">a web server</string>
    <string name="q2o1">Servers</string>
    <string name="q2o2">Desktops</string>
    <string name="q2o3">Mobile devices</string>
    <string name="q3o1">JVM</string>
    <string name="q3o2">DVM</string>
    <string name="q3o3">SVM</string>
    <string name="q4o1">C</string>
    <string name="q4o2">Java</string>
    <string name="q4o3">C++</string>
    <string name="q5o1">Android Phone Kit</string>
    <string name="q5o2">Android Page Kit</string>
    <string name="q5o3">Android Package Kit</string>
    <string name="q6o1">Application Programming Interface</string>
    <string name="q6o2">Android Programming Interface</string>
    <string name="q6o3">Android Page Interface</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="previous">Previous</string>
    <string name="result">Result</string>
    <string name="try_again">Try again</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appNote">Welcome to Wireless Programming Final project application.
        \nIn this application
        \nYou can calculate value,
        \nYou can calculate BMI,
        \nYou can participate a quiz.</string>
    <string name="calculatorNote">This is a full function calculate. In this section you can do Addition, Subtraction, Multiplication, Division and many more.</string>
    <string name="bmiNote">This is a full function BMI calculator. In this section you can find your BMI.</string>
    <string name="quizNote">This is a full function Quiz. In this section you can participate a MCQ quiz.</string>
    <string-array name="Options">
        <item>Select an option</item>
        <item>Calculator</item>
        <item>BMI Calculator</item>
        <item>Quiz app</item>
    </string-array>
</resources>