<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg0"
    android:orientation="vertical"
    tools:context=".BMIActivity">

    <TextView
        android:id="@+id/textViewID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/text"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/heightID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/bg1"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:padding="30sp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="Autofill" />

        <RadioGroup
            android:id="@+id/radioGroupID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/inputCmID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cm"
                android:textSize="25sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/inputInchID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inch"
                android:textSize="25sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/weightID"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/bg1"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:padding="25sp"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/kg"
            android:textColor="@color/text"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30sp"
        android:gravity="center"
        android:onClick="Calculation"
        android:text="@string/calculate"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="UsingOnClickInXml" />


    <TextView
        android:id="@+id/outputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/output"
        android:gravity="center"
        android:hint="@string/output"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp"
        android:gravity="right">

        <Button
            android:id="@+id/next3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:onClick="next3"
            android:text="Next"
            android:textColor="#FFFFFF" />
    </LinearLayout>


</LinearLayout>