<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".ActivityCalculator">

    <TextView
        android:id="@+id/secondarytextViewID"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="5sp"
        android:layout_weight=".5"
        android:background="@color/Gray"
        android:gravity="center"
        android:textAlignment="textEnd"
        android:textSize="30sp"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/primarytextViewID"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.12"
        android:gravity="center"
        android:text="@string/_0"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.1"
        android:background="@color/HotPink"
        android:weightSum="4">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/ce"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/c"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonDel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/del"
            android:textSize="25sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="/"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.1"
        android:background="@color/HotPink"
        android:weightSum="4">

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_7"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_8"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_9"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonMul"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="*"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.1"
        android:background="@color/HotPink"
        android:weightSum="4">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_4"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_5"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_6"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSub"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="-"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.1"
        android:background="@color/HotPink"
        android:weightSum="4">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_1"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,NestedWeights" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_2"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_3"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonSum"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="+"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:background="@color/HotPink"
        android:weightSum="4">

        <Button
            android:id="@+id/Buttonplusmin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="+/-"
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText,NestedWeights" />

        <Button
            android:id="@+id/button0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="@string/_0"
            android:textSize="30sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="."
            android:textSize="50sp"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/buttonResult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:onClick="calculation"
            android:text="="
            android:textSize="30sp"
            tools:ignore="ButtonStyle,HardcodedText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:gravity="right">

        <Button
            android:id="@+id/next2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:onClick="next2"
            android:text="Next"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>